--- a/project/src/main/resources/templates/game.html
+++ b/project/src/main/resources/templates/game.html
@@ -6,6 +6,17 @@
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 <style>
+	
+	#bet-amount,
+	#bet-label {
+		margin-top: 30px;
+	}
+
+	#accept-form-left {
+		min-width: 700px;
+		min-height: 200px;
+	}
+
 	FORM{
 		text-align: right;
 	}
@@ -105,8 +116,28 @@
 			</button>
 		</div>
 		
-		<form ng-submit="submit()">
-			<input type="submit" class="btn btn-primary btn-submit" value="Submit"/>
+		<form class="form-group" ng-submit="submit()">
+			<div class="col-lg-12" id="accept-form">
+				<div class="row">
+					<div class="col-lg-9" id="accept-form-left">
+					
+					</div>
+					<div class="col-lg-3">
+						<div class="row">
+							<div class="col-lg-4">
+								<label id="bet-label">Bet:</label>
+							</div>
+							<div class="col-lg-4">
+								<input ng-model="bet" type="text" class="form-control" id="bet-amount">
+							</div>
+							<div class="col-lg-4">
+								<input type="submit" class="btn btn-primary btn-submit" value="Submit"/>
+							</div>
+						</div>
+					</div>
+				</div>
+				
+			</div>
 		</form>
 		
 	</div>
@@ -117,12 +148,25 @@
 		$scope.numbers=[];
 		$scope.array=[];
 		
+		 $scope.combination = {
+			        bet : $scope.bet,
+			        nummber : $scope.array
+			    };
+		
 		
 		$scope.submit = function(){
+			$scope.combination = {
+		        bet : $scope.bet,
+		        numbers : $scope.array.toString(),
+		        user : {
+		        	id : 1
+		        }
+		    };
+			console.log($scope.array.toString());
 			$http({
 		        method : "POST",
 		        url : "/game-ready",
-		        data: $scope.array
+		        data: $scope.combination
 		    }).then(function mySuccess(response) {
 		        $window.location.href = '/rumble';
 		    }, function myError(response) {
