--- a/project/src/main/resources/templates/rumble.html
+++ b/project/src/main/resources/templates/rumble.html
@@ -3,20 +3,20 @@
 <head>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>		
 <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular.js"></script>
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 <style>
 	
 	#big-button {
 		min-width: 400px;
 		min-height: 400px;
 		border-radius: 50%;
-		font-size: 100px;
+		font-size: 100px !important;
 		border-width: 45px;
 	}
 	
 	.container {
-		max-width: 1600px;
+		width: 1600px !important;
 	}
 
 	.rumble-numbers {
@@ -31,8 +31,9 @@
 		text-align:center;
 	}
 	
-	#first-five-numbers .row button{
-		margin:15px 15px;
+	#first-five-numbers .row button,
+	#first-five-numbers .row button:focus{
+		margin:15px 15px !important;
 	}
 	
 	#drawers .row button {
@@ -43,8 +44,9 @@
 		min-height: 200px;
 	}
 	#pickers {
-		min-height: 483px;
+		min-height: 412px;
 		text-align: center;
+		
 	}
 	
 	FORM{
@@ -80,43 +82,36 @@
 	.button-purple {
 		border-color: purple;
 	}
-	button,button:focus {
-		font-size: 20px;
-		min-height: 70px;
-		min-width: 70px;
-		border-radius: 50px;
-		margin: 15px 45px;
-		outline: 0px;
-		border-width: 13px;
-		background-color: white;
-	}
 	
-	.button-clicked,button:focus{
-		 box-shadow:
-        inset 0 0 50px #fff,      /* inner white */
-        inset 20px 0 80px #f0f,   /* inner left magenta short */
-        inset -20px 0 80px #0ff,  /* inner right cyan short */
-        inset 20px 0 300px #f0f,  /* inner left magenta broad */
-        inset -20px 0 300px #0ff, /* inner right cyan broad */
-        0 0 50px #fff,            /* outer white */
-        0px 0 20px #f0f,        /* outer left magenta */
-        10px 0 80px #0ff;     
+	button,button:focus {
+		background-color: white;
+		border-width: 13px;
+		outline: 0px;
+		min-width: 70px;
+		min-height: 70px;
+		border-radius: 50px;
+		
+	/*
+		font-size: 20px;
+		margin: 15px 45px !important;
+		*/
+		
 	}
 	
 	/* RUMBLE PAGE */
 	.prizeLabel {
 		font-size: 40px;
-		margin: 20px 10px;
+		margin: 22px 10px;
 	}
 	
 	.prizeLabel-right {
 		font-size: 40px;
-		margin: 20px 31px;
+		margin: 22px 31px;
 	}
 	
 	.label-midprize {
 		font-size: 25px;
-		margin: 27px 35px;
+		margin: 33px 35px;
 	}
 	
 	#my-numbers {
@@ -125,7 +120,7 @@
 	}
 	
 	#my-numbers button {
-		margin: 15px 5px;
+		margin: 15px 5px !important;
 	}
 	
 	.right-6-div {
@@ -142,6 +137,7 @@
 <title>Rumble</title>
 </head>
 <body ng-app="myApp" ng-controller="myCtrl">
+	<div th:replace="views/fragments/header">&nbsp;</div>
 	<div class="container">
 		<div class="row">
 			<div class="col-lg-3 left-column-numbers">
@@ -361,7 +357,7 @@
 			}
 			
 			$(document).ready(function(){
-				$scope.refreshIntervalId = setInterval($scope.getBallsOn7sec,500);
+				$scope.refreshIntervalId = setInterval($scope.getBallsOn7sec,10000);
 				
 			});
 			
